--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           pedrofires</a
         >
 
-        <p>An student focused on learning programming for web</p>
+        <p>A student focused on learning programming for web</p>
 
         <ul>
           <!--<li>
