fixed images src

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
           </li>-->
           <li class="instagram">
             <a href="https://instagram.com/_pedrofogos" target="_blank">
-              <img src="/images/instagram.svg" alt="Ícone do instagram"
+              <img src="images/instagram.svg" alt="Ícone do instagram"
             /></a>
           </li>
           <li class="facebook">
             <a href="https://facebook.com/pedrofires" target="_blank">
-              <img src="/images/facebook.svg" alt="Ícone do facebook"
+              <img src="images/facebook.svg" alt="Ícone do facebook"
             /></a>
           </li>
           <!--<li>
